Update build scripts and documentation for WinCC OA Java
Added Java/install.sh for Maven local install. Updated Java/pom.xml to specify maven-compiler-plugin version. Refactored Native/Manager and Native/Driver build scripts to remove sourcing of make.env and renamed executable from WCCOAJavaManager to WCCOAjava. Renamed BUILD_README.md to README.md in Native/Manager. Updated README.md and docs/API.md for improved build, install, and API usage instructions.